# aisdk

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: anthropic_vision_qa.rs  google_vision_qa.rs  image_model.rs
examples/git-summary/: Cargo.toml
examples/react-axum-agent/backend/: .env.example  Cargo.toml
examples/react-axum-agent/frontend/: README.md  index.html
macros/: Cargo.toml  README.md
scripts/: provider-codegen.py
src/core/: capabilities.rs  client.rs  messages.rs  mod.rs
src/core/image_model/: mod.rs  request.rs
src/core/language_model/: request.rs
src/providers/302ai/: capabilities.rs
src/providers/abacus/: capabilities.rs
src/providers/aihubmix/: capabilities.rs
src/providers/alibaba/: capabilities.rs
src/providers/alibaba-cn/: capabilities.rs
src/providers/amazon_bedrock/: capabilities.rs
src/providers/anthropic/: capabilities.rs  conversions.rs  language_model.rs
src/providers/baseten/: capabilities.rs
src/providers/berget/: capabilities.rs
src/providers/chutes/: capabilities.rs
src/providers/cloudflare-ai-gateway/: capabilities.rs
src/providers/cloudflare-workers-ai/: capabilities.rs
src/providers/cortecs/: capabilities.rs
src/providers/deepseek/: capabilities.rs
src/providers/fastrouter/: capabilities.rs
src/providers/fireworks-ai/: capabilities.rs
src/providers/friendli/: capabilities.rs
src/providers/github-copilot/: capabilities.rs
src/providers/google/: conversions.rs  (+4 more)
tests/provider/: amazon_bedrock_tests.rs  openrouter_tests.rs  togetherai_tests.rs  xai_tests.rs
(+51 files in other folders)
